[package]
name = "aoc2019"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-aoc = { path = "../rust-aoc" }
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
itertools = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "env-filter"] }
parking_lot = "0.12"
rayon = "1.8"
num = "0.4.3"
rustc-hash = "1.1"
