[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
itertools = "0.12"
regex = "1.10"
nom = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "env-filter"] }
parking_lot = "0.12"
rayon = "1.8"
futures = "0.3"
chrono = "0.4.31"
num = "0.4"
rustc-hash = "1.1"
