(lang dune 3.20)

(name aoc2025)

(generate_opam_files true)

(source
 (github viandoxdev/aoc))

(authors "viandoxdev")

(package
 (name aoc2025)
 (synopsis "AOC 2025 ocaml solutions")
 (description "Advent of Code 2025")
 (depends ocaml dune)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
